# couchbase-lite-c-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE
couchbase-lite-c/: Cargo.toml
couchbase-lite-c-sys/: Cargo.toml  build.rs
couchbase-lite-c-sys/src/: bindings.h  bindings.rs  lib.rs
couchbase-lite-c/benches/: bench.rs
couchbase-lite-c/src/: authenticator.rs  database.rs  document.rs  errors.rs  lib.rs  query.rs  replicator.rs  resultset.rs
example/: BUILDING.md  Cargo.toml
example/src/: main.rs  model.rs
