[package]
name = "couchbase-lite-c"
version = "0.1.0"
authors = ["Jérôme Benois <jerome@benois.fr>"]
edition = "2018"

[dependencies]
couchbase-lite-c-sys = { path = "../couchbase-lite-c-sys" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }

[dev-dependencies]
criterion = "0.1.2"

[[bench]]
name = "bench"
harness = false