[package]
name = "example"
version = "0.1.0"
authors = ["Jérôme Benois <jerome@benois.fr>"]
edition = "2018"

[dependencies]
couchbase-lite-c = { path = "../couchbase-lite-c" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
